--- a/src/tokens.css
+++ b/src/tokens.css
@@ -1,59 +1,63 @@
 :root {
+  /** Quantinuum brand colors **/
+  --quantinuum-1: 169 54% 92%;
+  --quantinuum-2: 167 55% 77%;
+  --quantinuum-3: 168 55% 62%;
+  --quantinuum-4: 170 54% 41%;
+  --quantinuum-5: 176 54% 25%;
+
   color-scheme: light;
-  --background: 0 0% 98%;
-  --foreground: 240 5.9% 10%;
+  --background: 0 0% 100%;
+  --foreground: 0 0% 3.9%;
   --card: 0 0% 100%;
-  --card-foreground: 240 5.9% 10%;
+  --card-foreground: 0 0% 3.9%;
   --popover: 0 0% 100%;
-  --popover-foreground: 240 5.9% 10%;
-  --primary: 240 5.9% 10%;
+  --popover-foreground: 0 0% 3.9%;
+  --primary: 0 0% 9%;
   --primary-foreground: 0 0% 98%;
-  --secondary: 240 4.8% 95.9%;
-  --secondary-foreground: 240 5.9% 10%;
-  --muted: 240 4.8% 95.9%;
-  --muted-foreground: 240 3.8% 46.1%;
-  --accent: 170 40% 61%;
-  --accent-foreground: 240 5.9% 10%;
+  --secondary: 0 0% 96.1%;
+  --secondary-foreground: 0 0% 9%;
+  --muted: 0 0% 96.1%;
+  --muted-foreground: 0 0% 45.1%;
+  --accent: var(--quantinuum-4);
+  --accent-foreground: var(--foreground);
   --destructive: 0 84.2% 60.2%;
   --destructive-foreground: 0 0% 98%;
-  --border: 240 5.9% 90%;
-  --input: 240 5.9% 90%;
-  --ring: 240 5.9% 10%;
+  --border: 0 0% 89.8%;
+  --input: 0 0% 89.8%;
+  --ring: 0 0% 3.9%;
   --radius: 0.3rem;
   --chart-1: 12 76% 61%;
   --chart-2: 173 58% 39%;
   --chart-3: 197 37% 24%;
   --chart-4: 43 74% 66%;
   --chart-5: 27 87% 67%;
-  /** Quantinuum brand color **/
-  --quantinuum: 168 50% 77%;
 }
 
 :root [data-theme="dark"] {
   color-scheme: dark;
-  --background: 240 10% 3.9%;
+  --background: 0 0% 3.9%;
   --foreground: 0 0% 98%;
-  --card: 240 10% 10%;
+  --card: 0 0% 3.9%;
   --card-foreground: 0 0% 98%;
-  --popover: 240 5.9% 10%;
+  --popover: 0 0% 3.9%;
   --popover-foreground: 0 0% 98%;
   --primary: 0 0% 98%;
-  --primary-foreground: 240 5.9% 10%;
-  --secondary: 240 5.9% 10%;
+  --primary-foreground: 0 0% 9%;
+  --secondary: 0 0% 14.9%;
   --secondary-foreground: 0 0% 98%;
-  --muted: 240 5.9% 10%;
-  --muted-foreground: 240 5% 64.9%;
-  --accent: 170 40% 61%;
-  --accent-foreground: 0 0% 98%;
+  --muted: 0 0% 14.9%;
+  --muted-foreground: 0 0% 63.9%;
+  --accent: var(--quantinuum-2);
+  --accent-foreground: var(--foreground);
   --destructive: 0 62.8% 30.6%;
   --destructive-foreground: 0 0% 98%;
-  --border: 240 3.7% 15.9%;
-  --input: 240 5.3% 26.1%;
-  --ring: 240 3.7% 15.9%;
+  --border: 0 0% 14.9%;
+  --input: 0 0% 14.9%;
+  --ring: 0 0% 83.1%;
   --chart-1: 220 70% 50%;
   --chart-2: 160 60% 45%;
   --chart-3: 30 80% 55%;
   --chart-4: 280 65% 60%;
   --chart-5: 340 75% 55%;
-  --quantinuum: 168 50% 77%;
 }
