--- a/src/tokens.css
+++ b/src/tokens.css
@@ -1,33 +1,31 @@
 :root {
+  /** Quantinuum brand colors **/
+  --quantinuum-weaker: 169 54% 92%;
+  --quantinuum-weak: 167 55% 77%;
+  --quantinuum: 168 55% 62%;
+  --quantinuum-strong: 170 54% 41%;
+  --quantinuum-stronger: 176 54% 25%;
+
   color-scheme: light;
   --background: 0 0% 100%;
   --foreground: 240 10% 3.9%;
-
   --card: 0 0% 100%;
   --card-foreground: 240 10% 3.9%;
-
   --popover: 0 0% 100%;
   --popover-foreground: 240 10% 3.9%;
-
   --primary: 240 5.9% 10%;
   --primary-foreground: 0 0% 98%;
-
-  --secondary: 240 4.8% 95.9%;
-  --secondary-foreground: 240 5.9% 10%;
-
-  --muted: 240 4.8% 95.9%;
-  --muted-foreground: 240 3.8% 46.1%;
-
-  --accent: 240 4.8% 95.9%;
-  --accent-foreground: 240 5.9% 10%;
-
-  --destructive: 0 72.22% 50.59%;
+  --secondary: 0 0% 96.1%;
+  --secondary-foreground: 0 0% 9%;
+  --muted: 0 0% 96.1%;
+  --muted-foreground: 0 0% 45.1%;
+  --accent: 0 0% 96.1%;
+  --accent-foreground: 0 0% 9%;
+  --destructive: 0 84.2% 60.2%;
   --destructive-foreground: 0 0% 98%;
-
   --border: 240 5.9% 88%;
   --input: 240 5.9% 88%;
   --ring: 240 10% 3.9%;
-
   --radius: 0.5rem;
 }
 
@@ -35,29 +33,26 @@
   color-scheme: dark;
   --background: 240 10% 3.9%;
   --foreground: 0 0% 98%;
-
   --card: 240 10% 3.9%;
   --card-foreground: 0 0% 98%;
-
   --popover: 240 10% 3.9%;
   --popover-foreground: 0 0% 98%;
-
   --primary: 0 0% 98%;
   --primary-foreground: 240 5.9% 10%;
-
   --secondary: 240 3.7% 15.9%;
   --secondary-foreground: 0 0% 98%;
-
-  --muted: 240 3.7% 15.9%;
-  --muted-foreground: 240 5% 64.9%;
-
-  --accent: 240 3.7% 15.9%;
+  --muted: 0 0% 14.9%;
+  --muted-foreground: 0 0% 63.9%;
+  --accent: 0 0% 14.9%;
   --accent-foreground: 0 0% 98%;
-
-  --destructive: 0 84% 60%;
-  --destructive-foreground: 240 10% 3.9%;
-
-  --border: 240 3.7% 16.9%;
-  --input: 240 3.7% 26.9%;
-  --ring: 240 4.9% 83.9%;
+  --destructive: 0 62.8% 30.6%;
+  --destructive-foreground: 0 0% 98%;
+  --border: 0 0% 14.9%;
+  --input: 0 0% 14.9%;
+  --ring: 0 0% 83.1%;
+  --chart-1: 220 70% 50%;
+  --chart-2: 160 60% 45%;
+  --chart-3: 30 80% 55%;
+  --chart-4: 280 65% 60%;
+  --chart-5: 340 75% 55%;
 }
