fix: Add link color.

--- a/src/tokens.css
+++ b/src/tokens.css
@@ -45,6 +45,8 @@
   --chart-3: 197 37% 24%;
   --chart-4: 43 74% 66%;
   --chart-5: 27 87% 67%;
+
+  --link: 245, 58%, 51%;
 }
 
 :root [data-theme="dark"] {
@@ -92,4 +94,6 @@
   --chart-3: 30 80% 55%;
   --chart-4: 280 65% 60%;
   --chart-5: 340 75% 55%;
+
+  --link: 230, 94%, 82%;
 }
