fix: Use quantinuum teal.

--- a/src/tokens.css
+++ b/src/tokens.css
@@ -46,7 +46,7 @@
   --chart-4: 43 74% 66%;
   --chart-5: 27 87% 67%;
 
-  --link: 245, 58%, 51%;
+  --link: 170 54% 41%;
 }
 
 :root [data-theme="dark"] {
@@ -95,5 +95,5 @@
   --chart-4: 280 65% 60%;
   --chart-5: 340 75% 55%;
 
-  --link: 230, 94%, 82%;
+  --link: 168 54% 62%;
 }
