fix(): preserve old paper

--- a/src/tokens.css
+++ b/src/tokens.css
@@ -53,7 +53,8 @@
   color-scheme: dark;
   --background: 240 10% 5.9%;
   --foreground: 0 0% 98%;
-  --paper: 240 3.7% 13.9%;
+  --paper: 240 3.7% 7.9%;
+  --paper2: 240 3.7% 13.9%;
 
   --card: 240 10% 5.9%;
   --card-foreground: 0 0% 98%;
