--- a/src/tokens.css
+++ b/src/tokens.css
@@ -3,7 +3,7 @@
   --background: 0 0% 97.9%;
   --foreground: 240 10% 0%;
   --paper: 240 4.8% 100%;
-  --paper2: var(--paper);
+  /* --paper2: var(--paper); */
 
   --card: 0 0% 100%;
   --card-foreground: 240 10% 5.9%;
@@ -54,8 +54,8 @@
   color-scheme: dark;
   --background: 240 10% 5.9%;
   --foreground: 0 0% 98%;
-  --paper: 240 3.7% 7.9%;
-  --paper2: 240 3.7% 13.9%;
+  --paper: 240 3.7% 10.9%;
+  /* --paper2: 240 3.7% 13.9%; */
 
   --card: 240 10% 5.9%;
   --card-foreground: 0 0% 98%;
